--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pockemons",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://antonMandrichenko.github.io/pockemons",
   "dependencies": {
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,6 +29,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
